--- a/webui/index.html
+++ b/webui/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chess Analysis</title>
     <style>
-      body { margin:0; background:#111; color:#eee; font-family: system-ui, sans-serif; }
+      body { margin:0; background:#1a1a1a; color:#eee; font-family: system-ui, sans-serif; }
       .panel { padding: 12px; }
       button, input, select, textarea { background:#222; color:#eee; border:1px solid #444; border-radius:6px; padding:6px 10px; }
       button:hover { filter: brightness(1.1); }
